<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Dream Aspirant</string>
    <string name="more_than_just_an_app">More than just an app</string>
    <string name="dream_ias">Dream Aspirant</string>
    <string name="setting_up_your_account">Setting up your account</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="confirm_your_account">Confirm your account</string>
    <string name="i_agree_to_dream_ias_s_terms_amp_conditions"><font color="#939393">I agree to Dream IAS\'s</font> <font color="#EC952F">Terms &amp; Conditions</font> <font color="#939393">and </font><font color="#EC952F">Privacy Policy</font></string>
    <string name="and_privacy_policy"><font color="#939393">and </font><font color="#EC952F">Privacy Policy</font></string>
    <string name="wallet">Wallet</string>
    <string name="total_balance">Total Balance</string>
    <string name="filter">Filter</string>
    <string name="last_week">Last Week</string>
    <string name="last_month">Last Month</string>
    <string name="last_year">Last Year</string>
    <string name="unlimited_playing">Unlimited Playing</string>
    <string name="add">Add ₹ 50</string>
    <string name="submit_details">Submit Details</string>
    <string name="min_sec">%s : %s</string>
    <string name="hour_min_sec">%s : %s : %s</string>
    <string name="all_notifications">All Notifications</string>
    <string name="live_streaming">Live Streaming</string>
    <string name="new_contests">New Contests</string>
    <string name="prize_winning">Prize Winning</string>
    <string name="subscription_reminder">Subscription Reminder</string>
    <string name="my_wallet">My Wallet</string>
    <string name="upgrade">Upgrade</string>

    <string name="_20"><strike>₹20</strike></string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="default_notification_channel_id" tools:ignore="ExtraTranslation">notification_channel_id</string>

</resources>