<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.notification.NotificationActivity">
    <include
        android:id="@+id/toolbar"
        layout="@layout/common_toolbar"
        android:fitsSystemWindows="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView43"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/all_notifications"
        style="@style/normaltxt_16sp_Semibold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/allNotiBtn"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dp_30"
        android:layout_marginEnd="24dp"
        android:checked="true"
        android:thumb="@drawable/custom_thumb"
        app:layout_constraintBottom_toBottomOf="@+id/textView43"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView43"
        app:track="@drawable/custom_track" />

    <TextView
        android:id="@+id/textView431"
        style="@style/normaltxt_16sp_Semibold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:text="@string/live_streaming"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider2" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/liveNotiBtn"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dp_30"
        android:layout_marginEnd="24dp"
        android:checked="true"
        android:thumb="@drawable/custom_thumb"
        app:layout_constraintBottom_toBottomOf="@+id/textView431"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView431"
        app:track="@drawable/custom_track" />

    <View
        android:id="@+id/divider2"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="@+id/allNotiBtn"
        app:layout_constraintStart_toStartOf="@+id/textView43"
        app:layout_constraintTop_toBottomOf="@+id/textView43" />

    <View
        android:id="@+id/divider21"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="@+id/allNotiBtn"
        app:layout_constraintStart_toStartOf="@+id/textView43"
        app:layout_constraintTop_toBottomOf="@+id/textView431" />

    <TextView
        android:id="@+id/textView4311"
        style="@style/normaltxt_16sp_Semibold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:text="@string/new_contests"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider21" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/newNotiBtn"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dp_30"
        android:layout_marginEnd="24dp"
        android:checked="true"
        android:thumb="@drawable/custom_thumb"
        app:layout_constraintBottom_toBottomOf="@+id/textView4311"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView4311"
        app:track="@drawable/custom_track" />

    <View
        android:id="@+id/divider211"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="@+id/allNotiBtn"
        app:layout_constraintStart_toStartOf="@+id/textView43"
        app:layout_constraintTop_toBottomOf="@+id/textView4311" />

    <TextView
        android:id="@+id/textView43111"
        style="@style/normaltxt_16sp_Semibold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:text="@string/prize_winning"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider211" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/prizeNotiBtn"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dp_30"
        android:layout_marginEnd="24dp"
        android:checked="false"
        android:thumb="@drawable/custom_thumb"
        app:layout_constraintBottom_toBottomOf="@+id/textView43111"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView43111"
        app:track="@drawable/custom_track" />

    <View
        android:id="@+id/divider2111"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="@+id/allNotiBtn"
        app:layout_constraintStart_toStartOf="@+id/textView43"
        app:layout_constraintTop_toBottomOf="@+id/textView43111" />

    <TextView
        android:id="@+id/textView431111"
        style="@style/normaltxt_16sp_Semibold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:text="@string/subscription_reminder"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider2111" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/subNotiBtn"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dp_30"
        android:layout_marginEnd="24dp"
        android:checked="false"
        android:thumb="@drawable/custom_thumb"
        app:layout_constraintBottom_toBottomOf="@+id/textView431111"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView431111"
        app:track="@drawable/custom_track" />

    <View
        android:id="@+id/divider21111"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="@+id/allNotiBtn"
        app:layout_constraintStart_toStartOf="@+id/textView43"
        app:layout_constraintTop_toBottomOf="@+id/textView431111" />
</androidx.constraintlayout.widget.ConstraintLayout>